# Foil-Serve

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: docker-publish.yaml  docker-publish.yml.disable  pypi-publish.yaml
docker/: compose.yaml
docker/mount_config/foil_serve/: pipeline_config.yaml  server_config.toml
docker/mount_config/vllm/: GLM-4.6V-Flash-AWQ-4bit.yaml  Ministral-3-3B-Instruct-2512-AWQ-4bit.yaml  PaddlePaddleOCR-VL-1.5.yaml  PaddlePaddleOCR-VL-1.5_config.yaml  Qwen3-VL-8B-Instruct-AWQ-4bit.yaml
src/foil_serve/: debug.py  libreoffice.py  main.py  pipeline.py  postprocessing.py  schemas.py  security.py  settings.py  spreadsheet.py  table_utils.py  utils.py  vlm.py
src/foil_serve/config/: pipeline_config.yaml  server_config.toml
tests/: README.md  conftest.py
tests/spreadsheet/: generate_test_files.py  test_excel2txt.py
tests/spreadsheet/fixtures/: all_error_types.xlsx  all_sheets_empty.xlsx  duplicate_empty_columns.xlsx  error_headers.xlsx  float_nan_merged.xlsx  many_empty_one_tiny.xlsx  mixed_empty_and_data.xlsx  multi_sheet_mixed_errors.xlsx  multi_table_independent.xlsx  multi_table_overlapping_columns.xlsx  multi_table_sparse.xlsx  multi_table_special_names.xlsx  multi_table_varying_sizes.xlsx  multiline_and_special_chars.xlsx  nan_flood.xlsx  single_cell.xlsx  whitespace_only_rows.xlsx  wide_100_columns.xlsx
